--- a/electro-server/pom.xml
+++ b/electro-server/pom.xml
@@ -151,7 +151,7 @@
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
 
-<!-- JUnit 5 -->
+        <!-- JUnit 5 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -159,8 +159,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.8.0</version> <!-- or whatever version compatible with your mockito-core -->
+            <scope>test</scope>
+        </dependency>
         
-</dependencies>
+    </dependencies>
 
 
     <!--
